--- a/src/ShopArticleReviewBundle/Resources/translations/admin-enum.de.xliff
+++ b/src/ShopArticleReviewBundle/Resources/translations/admin-enum.de.xliff
@@ -5,11 +5,11 @@
 
             <trans-unit id="pkg_shop_article_review_module_shop_article_review_configuration.option_show_author_name.Vorname und Nachname">
                 <source>pkg_shop_article_review_module_shop_article_review_configuration.option_show_author_name.Vorname und Nachname</source>
-                <target>Vorname und Nachname</target>
+                <target>Vor- und Nachname</target>
             </trans-unit>
             <trans-unit id="pkg_shop_article_review_module_shop_article_review_configuration.option_show_author_name.Vorname und erste Buchstabe vom Nachnamen">
                 <source>pkg_shop_article_review_module_shop_article_review_configuration.option_show_author_name.Vorname und erste Buchstabe vom Nachnamen</source>
-                <target>Vorname und erster Buchstabe vom Nachnamen</target>
+                <target>Vorname und erster Buchstabe des Nachnamens</target>
             </trans-unit>
             <trans-unit id="pkg_shop_article_review_module_shop_article_review_configuration.option_show_author_name.Aliasname">
                 <source>pkg_shop_article_review_module_shop_article_review_configuration.option_show_author_name.Aliasname</source>
