--- a/src/ShopBundle/Resources/translations/admin.de.xliff
+++ b/src/ShopBundle/Resources/translations/admin.de.xliff
@@ -265,6 +265,18 @@
                 <source>chameleon_system_shop.list_manager_article.filter_active_all</source>
                 <target>Alle</target>
             </trans-unit>
+            <trans-unit id="chameleon_system_shop.product_search_index.headline">
+                <source>chameleon_system_shop.product_search_index.headline</source>
+                <target>Produktsuchindex generieren</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.product_search_index.generate">
+                <source>chameleon_system_shop.product_search_index.generate</source>
+                <target>Generiere</target>
+            </trans-unit>
+            <trans-unit id="chameleon_system_shop.product_search_index.completed">
+                <source>chameleon_system_shop.product_search_index.completed</source>
+                <target>Abgeschlossen</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
