--- a/src/ShopBundle/Resources/translations/messages.en.xliff
+++ b/src/ShopBundle/Resources/translations/messages.en.xliff
@@ -263,6 +263,11 @@
                 <target>Manufacturer</target>
             </trans-unit>
 
+            <trans-unit id="chameleon_system_shop.products_of_manufacturer">
+                <source>chameleon_system_shop.products_of_manufacturer</source>
+                <target>Products of</target>
+            </trans-unit>
+
         </body>
     </file>
 </xliff>
